Node Js Project

--- a/views/layouts/mainLayout.hbs
+++ b/views/layouts/mainLayout.hbs
@@ -3,12 +3,20 @@
 <html>
     <head>
         <title>Node.js express mongodb</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </head>
     <body class="bg-info">
-        <a href="/"><button class="btn btn-primary"><i class="glyphicon glyphicon-home"></i></button></a>
+        <a href="/"><button class="btn btn-primary">Home</button></a>
         <div class="row">
             <div class="col-md-6 offset-md-3" style="background-color: #fff; margin-top: 5%;margin-left: 25%;">
                 {{{body}}}
