--- a/views/main/index.hbs
+++ b/views/main/index.hbs
@@ -1,4 +1,5 @@
 <div class="row" style="background-color: #d9edf7; padding: 10%">
-    <div class="col-sm-6"><center><a href="/employee/list"<button class="btn btn-success"><i class="glyphicon glyphicon-education"></i> Student</button></a></center></div>
-    <div class="col-sm-6"><center><button class="btn btn-warning"><i class="glyphicon glyphicon-user"></i> Company</button></center></div>
+    <div class="col-sm-4"><center><a href="/student/list"<button class="btn btn-success"><i class="glyphicon glyphicon-education"></i> Student</button></a></center></div>
+    <div class="col-sm-4"><center><a href="/company/list"<button class="btn btn-warning"><i class="glyphicon glyphicon-user"></i> Company</button></a></center></div>
+    <div class="col-sm-4"><center><a href="/company_student/list"<button class="btn btn-primary"><i class="glyphicon glyphicon-btc"></i> Company-Student</button></a></center></div>
 </div>
