Node Js Project

--- a/views/company_student/addOrEdit.hbs
+++ b/views/company_student/addOrEdit.hbs
@@ -46,7 +46,7 @@ input[type=checkbox]{
 <script type="text/javascript">
 	$('#langOpt').multiselect({
     columns: 1,
-    placeholder: 'Select Countries',
+    placeholder: 'Select Students',
     search: true
 });
 $("li").click(function(){
